--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ typer>=0.3.0,<0.5.0
 pathy>=0.3.5
 # Third party dependencies
 numpy>=1.15.0
+openpyxl>=3.0.10
 requests>=2.13.0,<3.0.0
 tqdm>=4.38.0,<5.0.0
 pydantic>=1.7.4,!=1.8,!=1.8.1,<1.10.0
